welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: not found: value asmile
  if (asmile==true){if (bsmile==true){return true}}
      ^monkeyTrouble:2: error: not found: value bsmile
  if (asmile==true){if (bsmile==true){return true}}
                        ^monkeyTrouble:3: error: not found: value asmile
  if (asmile==false){if (bsmile==false){return true}}
      ^monkeyTrouble:3: error: not found: value bsmile
  if (asmile==false){if (bsmile==false){return true}}
                         ^