welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if (asmile==true){if (bsmile==true){return true}}
  if (asmile==false){if (bsmile==false){return true}}
  return false}